--- a/part/basis.tex
+++ b/part/basis.tex
@@ -1,7 +1,24 @@
 \section{Теоретические основы безопасности в СУБД}
 
-2.1. Критерии защищенности БД
-Критерии оценки надежных компьютерных систем (TCSEC). Понятие политики безопасности. Совместное применение различных политик безопасности в рамках единой модели. Интерпретация TCSEC для надежных СУБД (TDI). Оценка надежности СУБД как компоненты вычислительной системы. Монитор ссылок. Применение TCSEC к СУБД непосредственно. Элементы СУБД, к которым применяются TDI: метки, аудит, архитектура системы, спецификация, верификация, проектная документация. Критерии безопасности ГТК.
+\subsection{Критерии защищенности БД}
 
-2.2. Модели безопасности в СУБД
-Дискреционная (избирательная) и мандатная (полномочная) модели безопасности. Класси-фикация моделей. Аспекты исследования моделей безопасности. Особенности применения мо-делей безопасности в СУБД. Дискреционные модели: HRU, Take-Grant, Action-Entity, Wood. Мандатные модели: Bell-LaPadula, Biba, Dion, Sea View, Jajodia\&Sandhu, Smith\&Winslett, реше-точная. БД с многоуровневой секретностью (MLS). Многозначность.
+\paragraph{Критерии оценки надежных компьютерных систем (TCSEC)}
+\paragraph{Понятие политики безопасности}
+\paragraph{Совместное применение различных политик безопасности в рамках единой модели}
+\paragraph{Интерпретация TCSEC для надежных СУБД (TDI)}
+\paragraph{Оценка надежности СУБД как компоненты вычислительной системы}
+\paragraph{Монитор ссылок}
+\paragraph{Применение TCSEC к СУБД непосредственно}
+\paragraph{Элементы СУБД, к которым применяются TDI: метки, аудит, архитектура системы, спецификация, верификация, проектная документация}
+\paragraph{Критерии безопасности ГТК}
+
+\subsection{Модели безопасности в СУБД}
+
+\paragraph{Дискреционная (избирательная) и мандатная (полномочная) модели безопасности}
+\paragraph{Классификация моделей}
+\paragraph{Аспекты исследования моделей безопасности}
+\paragraph{Особенности применения моделей безопасности в СУБД}
+\paragraph{Дискреционные модели: HRU, Take-Grant, Action-Entity, Wood}
+\paragraph{Мандатные модели: Bell-LaPadula, Biba, Dion, Sea View, Jajodia\&Sandhu, Smith\&Winslett, решеточная}
+\paragraph{БД с многоуровневой секретностью (MLS)}
+\paragraph{Многозначность}
