--- a/part/concept.tex
+++ b/part/concept.tex
@@ -1,2 +1,10 @@
 \section{Концепция безопасности БД}
-Понятие безопасности БД. Угрозы безопасности БД: общие и специфичные. Требования безопасности БД. Защита от несанкционированного доступа. Защита от вывода. Целостность БД. Аудит. Многоуровневая защита. Типы контроля безопасности: потоковый, контроль вы-вода, контроль доступа.
+\paragraph{Понятие безопасности БД}
+\paragraph{Угрозы безопасности БД: общие и специфичные}
+\paragraph{Требования безопасности БД}
+\paragraph{Защита от несанкционированного доступа}
+\paragraph{Защита от вывода}
+\paragraph{Целостность БД}
+\paragraph{Аудит}
+\paragraph{Многоуровневая защита}
+\paragraph{Типы контроля безопасности: потоковый, контроль вывода, контроль доступа}
