--- a/part/integrity.tex
+++ b/part/integrity.tex
@@ -1,21 +1,47 @@
 \section{Механизмы обеспечения целостности СУБД}
-3.1. Угрозы целостности СУБД.
-Основные виды и причины возникновения угроз целостности. Способы противодействия.
 
-3.2. Метаданные и словарь данных.
-Назначение словаря данных. Доступ к словарю данных. Состав словаря. Представления словаря.
+\subsection{Угрозы целостности СУБД}
 
-3.3. Понятие транзакции.
-Фиксация транзакции. Прокрутки вперед и назад. Контрольная точка. Откат. Транзакции как средство изолированности пользователей. Сериализация транзакций. Методы сериализации транзакций.
+\paragraph{Основные виды и причины возникновения угроз целостности}
+\paragraph{Способы противодействия}
 
-3.4. Блокировки.
-Режимы блокировок. Правила согласования блокировок. Двухфазный протокол синхрони-зационных блокировок. Тупиковые ситуации, их распознавание и разрушение.
+\subsection{Метаданные и словарь данных}
 
-3.5. Ссылочная целостность.
-Декларативная и процедурная ссылочные целостности. Внешний ключ. Способы поддер-жания ссылочной целостности. 
+\paragraph{Назначение словаря данных}
+\paragraph{Доступ к словарю данных}
+\paragraph{Состав словаря}
+\paragraph{Представления словаря}
 
-3.6. Правила(триггеры).
-Цели использования правил. Способы задания, моменты выполнения.
+\subsection{Понятие транзакции}
 
-3.7. События.
-Назначение механизма событий. Сигнализаторы событий. Типы уведомлений о происхож-дении события. Компоненты механизма событий.
+\paragraph{Фиксация транзакции}
+\paragraph{Прокрутки вперед и назад}
+\paragraph{Контрольная точка}
+\paragraph{Откат}
+\paragraph{Транзакции как средство изолированности пользователей}
+\paragraph{Сериализация транзакций}
+\paragraph{Методы сериализации транзакций}
+
+\subsection{Блокировки}
+
+\paragraph{Режимы блокировок}
+\paragraph{Правила согласования блокировок}
+\paragraph{Двухфазный протокол синхронизационных блокировок}
+\paragraph{Тупиковые ситуации, их распознавание и разрушение}
+
+\subsection{Ссылочная целостность}
+
+\paragraph{Декларативная и процедурная ссылочные целостности}
+\paragraph{Внешний ключ}
+\paragraph{Способы поддержания ссылочной целостности}
+
+\subsection{Правила(триггеры)}
+\paragraph{Цели использования правил}
+\paragraph{Способы задания, моменты выполнения}
+
+\subsection{События}
+
+\paragraph{Назначение механизма событий}
+\paragraph{Сигнализаторы событий}
+\paragraph{Типы уведомлений о происхождении события}
+\paragraph{Компоненты механизма событий}
