finished adding substruct

--- a/part/availability.tex
+++ b/part/availability.tex
@@ -1,13 +1,21 @@
-\section{Механизмы, поддерживающие высокую готовность.}
+\section{Механизмы, поддерживающие высокую готовность}
 
-5.1. Средства, поддерживающие высокую готовность
-Аппаратная и программная поддержки. Кластерная организация серверов баз данных. Па-раметры настройки СУБД. Сохранение и восстановление БД
+\subsection{Средства, поддерживающие высокую готовность}
+\paragraph{Аппаратная и программная поддержки}
+\paragraph{Кластерная организация серверов баз данных}
+\paragraph{Параметры настройки СУБД}
+\paragraph{Сохранение и восстановление БД}
 
-5.2. Оперативное администрирование
-Задачи, средства и режимы администрирования. Мониторинг серверов СУБД.
+\subsection{Оперативное администрирование}
+\paragraph{Задачи, средства и режимы администрирования}
+\paragraph{Мониторинг серверов СУБД}
 
-5.3. Функциональная насыщенность СУБД
-Формы избыточности. Аппаратная избыточность. Избыточность данных. Программное зер-калирование. Тиражирование данных.
+\subsection{Функциональная насыщенность СУБД}
+\paragraph{Формы избыточности}
+\paragraph{Аппаратная избыточность}
+\paragraph{Избыточность данных}
+\paragraph{Программное зеркалирование}
+\paragraph{Тиражирование данных}
 
-5.4. Системы, обладающие свойством высокой готовности
-Описание, назначение, примеры.
+\subsection{Системы, обладающие свойством высокой готовности}
+\paragraph{Описание, назначение, примеры}
