--- a/part/confidentiality.tex
+++ b/part/confidentiality.tex
@@ -1,16 +1,32 @@
 \section{Механизмы обеспечения конфиденциальности в СУБД}
 
-4.1 Классификация угроз конфиденциальности СУБД
-Причины, виды, основные методы нарушения конфиденциальности. Типы утечки конфи-денциальной информации из СУБД, частичное разглашение. Соотношение защищенности и доступности данных. Получение несанкционированного доступа к конфиденциальной инфор-мации путем логических выводов. Методы противодействия. Особенности применения криптографических методов.
+\subsection{Классификация угроз конфиденциальности СУБД}
 
-4.2 Средства идентификации и аутентификации
-Общие сведения. Совместное применение средств идентификации и аутентификации, встроенных в СУБД и  в ОС. 
+\paragraph{Причины, виды, основные методы нарушения конфиденциальности}
+\paragraph{Типы утечки конфиденциальной информации из СУБД, частичное разглашение}
+\paragraph{Соотношение защищенности и доступности данных}
+\paragraph{Получение несанкционированного доступа к конфиденциальной информации путем логических выводов}
+\paragraph{Методы противодействия. Особенности применения криптографических методов}
 
-4.3 Средства управления доступом
-Основные понятия: субъекты и объекты, группы пользователей, привилегии, роли и пред-ставления. Виды привилегий: привилегии безопасности и доступа. Использование ролей и привилегий пользователей. Соотношение прав доступа, определяемых ОС и СУБД. Метки безопасности. Использование представлений для обеспечения конфиденциальности информации в СУБД.
+\subsection{Средства идентификации и аутентификации}
 
-4.4 Обеспечение конфиденциальности путем тиражирования БД 
-Формальная модель для обеспечения конфиденциальности БД с помощью тиражирования. Архитектура и политика безопасности в модели SINTRA. 
+\paragraph{Общие сведения}
+\paragraph{Совместное применение средств идентификации и аутентификации, встроенных в СУБД и в ОС}
 
-4.5 Аудит и подотчетность
-Подотчетность действий пользователя и аудит связанных с безопасностью событий. Реги-страция действий пользователя. Управление набором регистрируемых событий. Анализ регистрационной информации. 
+\subsection{Средства управления доступом}
+\paragraph{Основные понятия: субъекты и объекты, группы пользователей, привилегии, роли и представления}
+\paragraph{Виды привилегий: привилегии безопасности и доступа}
+\paragraph{Использование ролей и привилегий пользователей}
+\paragraph{Соотношение прав доступа, определяемых ОС и СУБД}
+\paragraph{Метки безопасности}
+\paragraph{Использование представлений для обеспечения конфиденциальности информации в СУБД}
+
+\subsection{Обеспечение конфиденциальности путем тиражирования БД}
+\paragraph{Формальная модель для обеспечения конфиденциальности БД с помощью тиражирования}
+\paragraph{Архитектура и политика безопасности в модели SINTRA}
+
+\subsection{Аудит и подотчетность}
+\paragraph{Подотчетность действий пользователя и аудит связанных с безопасностью событий}
+\paragraph{Регистрация действий пользователя}
+\paragraph{Управление набором регистрируемых событий}
+\paragraph{Анализ регистрационной информации}
