--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -1,19 +1,31 @@
 \section{Защита данных в распределенных системах}
+\subsection{Распределенные вычислительные среды}
+\paragraph{Распределенная обработка информации в среде клиент-сервер}
+\paragraph{Концепция распределенной вычислительной среды Distributed Computing Environment (DCE)}
+\paragraph{Распределенные базы данных в сетях ЭВМ}
 
-6.1 Распределенные вычислительные среды
-Распределенная обработка информации в среде клиент-сервер. Концепция распределенной вычислительной среды Distributed Computing Environment (DCE). Распределенные базы данных в сетях ЭВМ.
+\subsection{Угрозы безопасности распределенных СУБД}
+\paragraph{Угрозы доступности, целостности и конфиденциальности данных}
+\paragraph{Механизмы противодействия}
 
-6.2 Угрозы безопасности распределенных СУБД
-Угрозы доступности, целостности и конфиденциальности данных. Механизмы противодействия.
+\subsection{Распределенная обработка данных}
+\paragraph{Понятие распределенной транзакции}
+\paragraph{Модель обработки транзакций}
+\paragraph{Мониторы обработки транзакций}
+\paragraph{Корпоративная среда обработки транзакций}
 
-6.3 Распределенная обработка данных
-Понятие распределенной транзакции. Модель обработки транзакций. Мониторы обработки транзакций. Корпоративная среда обработки транзакций. 
+\subsection{Протоколы фиксации}
+\paragraph{Протоколы фиксации}
+\paragraph{Защищенные протоколы фиксации}
+\paragraph{Обработка распределенных транзакций в базах данных с многоуровневой секретностью (MLS)}
 
-6.4 Протоколы фиксации 
-Протоколы фиксации. Защищенные протоколы фиксации. Обработка распределенных транзакций в базах данных с многоуровневой секретностью (MLS).
+\subsection{Тиражирование данных}
+\paragraph{Обзор средств тиражирования данных}
+\paragraph{Эффективные алгоритмы тиражирования}
+\paragraph{Сравнение подходов к тиражированию БД}
 
-6.5 Тиражирование данных	
-Обзор средств тиражирования данных. Эффективные алгоритмы тиражирования. Сравне-ние подходов к тиражированию БД.
-
-6.6 Интеграция БД и Internet
-Современные тенденции. Обзор существующих технологий. Вопросы безопасности: угрозы и методы противодействия. Перспективы развития.
+\subsection{Интеграция БД и Internet}
+\paragraph{Современные тенденции}
+\paragraph{Обзор существующих технологий}
+\paragraph{Вопросы безопасности: угрозы и методы противодействия}
+\paragraph{Перспективы развития}
