--- a/part/intrusion.tex
+++ b/part/intrusion.tex
@@ -1,12 +1,20 @@
 \section{Распознавание вторжений в БД}
-8.1. Основные понятия.
-Определение понятия распознавания вторжений. Цели выявления злоупотреблений. Место процедуры распознавания вторжений в общей системе защиты. 
+\subsection{Основные понятия}
+\paragraph{Определение понятия распознавания вторжений}
+\paragraph{Цели выявления злоупотреблений}
+\paragraph{Место процедуры распознавания вторжений в общей системе защиты}
 
-8.2. Системы распознавания вторжений
-Типы моделей систем распознавания вторжений (ID-систем). Общая структура ID-систем. Шаблоны классов пользователей. Модели известных атак. 
+\subsection{Системы распознавания вторжений}
+\paragraph{Типы моделей систем распознавания вторжений (ID-систем)}
+\paragraph{Общая структура ID-систем}
+\paragraph{Шаблоны классов пользователей}
+\paragraph{Модели известных атак}
 
-8.3. Экспертные ID-системы.
-Метрики. Статистические модели. Профили. Примеры ID-систем. 
+\subsection{Экспертные ID-системы}
+\paragraph{Метрики}
+\paragraph{Статистические модели}
+\paragraph{Профили}
+\paragraph{Примеры ID-систем}
 
-8.4. Развитие систем распознавания вторжений.
-Основные тенденции.
+\subsection{Развитие систем распознавания вторжений}
+\paragraph{Основные тенденции}
