--- a/part/security.tex
+++ b/part/security.tex
@@ -1,12 +1,24 @@
 \section{Проектирование безопасности БД}
 
-9.1. Основные понятия 
-Безопасное программное обеспечение. Правила безопасности.
+\subsection{Основные понятия}
 
-9.2. Методология проектирования. 
-Отличия в проектировании безопасных ОС и СУБД. Основные требования к безопасности СУБД. Независимые принципы целостности данных. Модель авторизации в System R. Архитектура безопасной СУБД. Архитектура SeaView и ASD.
+\paragraph{Безопасное программное обеспечение}
+\paragraph{Правила безопасности}
 
-9.3. Проектирование безопасных БД.
-Фазы проектирования безопасных БД (по DoD). Предварительный анализ. Требования и политики  безопасности. Концептуальное проектирование. Логическое  проектирование. Физическое проектирование. 
+\subsection{Методология проектирования}
+\paragraph{Отличия в проектировании безопасных ОС и СУБД}
+\paragraph{Основные требования к безопасности СУБД}
+\paragraph{Независимые принципы целостности данных}
+\paragraph{Модель авторизации в System R}
+\paragraph{Архитектура безопасной СУБД} 
+\paragraph{Архитектура SeaView и ASD} 
 
-9.4. Формальные верификации и спецификации.
+\subsection{Проектирование безопасных БД}
+\paragraph{Фазы проектирования безопасных БД (по DoD)}
+\paragraph{Предварительный анализ}
+\paragraph{Требования и политики  безопасности}
+\paragraph{Концептуальное проектирование}
+\paragraph{Логическое  проектирование}
+\paragraph{Физическое проектирование}
+
+\subsection{Формальные верификации и спецификации}
