--- a/part/statistical.tex
+++ b/part/statistical.tex
@@ -1,10 +1,17 @@
 \section{Безопасность в статистических БД}
+\subsection{Общие сведения}
+\paragraph{Определение статистической БД}
+\paragraph{Классификация статистических БД}
+\paragraph{Характеристики статистических БД}
 
-7.1. Общие сведения. 
-Определение статистической БД. Классификация статистических БД. Характеристики статистических БД.
+\subsection{Угрозы статистических БД}
+\paragraph{Статистический вывод}
+\paragraph{Виды компрометации статистических БД}
+\paragraph{Методы получения информации из статистических БД}
 
-7.2. Угрозы статистических БД
-Статистический вывод. Виды компрометации статистических БД.. Методы получения информации из статистических БД.
-
-7.3. Защита в статистических БД
-Методы защиты от вывода. Статистические фильтры. Статистические функции. Чувствительные статистики. Критерии сравнения методов защиты.
+\subsection{Защита в статистических БД}
+\paragraph{Методы защиты от вывода}
+\paragraph{Статистические фильтры}
+\paragraph{Статистические функции}
+\paragraph{Чувствительные статистики}
+\paragraph{Критерии сравнения методов защиты}
