--- a/db.tex
+++ b/db.tex
@@ -8,12 +8,12 @@
 \maketitle
 \tableofcontents
 \input{part/concept}
-\input{part/basis}
-\input{part/integrity}
-\input{part/confidentiality}
-\input{part/availability}
-\input{part/distributed}
-\input{part/statistical}
-\input{part/intrusion}
-\input{part/security}
+%\input{part/basis}
+%\input{part/integrity}
+%\input{part/confidentiality}
+%\input{part/availability}
+%\input{part/distributed}
+%\input{part/statistical}
+%\input{part/intrusion}
+%\input{part/security}
 \end{document}
